# ms_agent_framework_example

./: .dockerignore  .env.example  .gitignore  Dockerfile  Microsoft_Agent_Framework.postman_collection.json  POSTMAN_SETUP.md  README.md  TODO.md  docker-compose.yaml  mkdocs.yaml  pyproject.toml
.github/: EVALUATION_QUALITY_GATES.md  SETUP_GITHUB_ACTIONS.md  evaluation-config.json
.github/scripts/: check_evaluation_scores.py
.github/workflows/: evaluation.yml  test.yml
data/: qr_data.jsonl
deployment/: Chart.yaml  values.yaml
deployment/templates/: _helpers.tpl  deploy.yaml  hpa.yaml  ingress.yaml  sa.yaml  secret.yaml  svc.yaml
docs/: README.md
iac/: agent.tf  data.tf  identity.tf  main.tf  outputs.tf  provider.tf  variables.tf
src/microsoft_agent_framework/: __init__.py  cli.py  config.py  observability.py
src/microsoft_agent_framework/application/agents/: research_agent.py  supervisor_agent.py  writer_agent.py
src/microsoft_agent_framework/application/evaluation_service/: eval.py
src/microsoft_agent_framework/application/factories/: __init__.py  agent_factory.py  azure_agent.py
src/microsoft_agent_framework/application/services/: __init__.py  agent_service.py  conversation_manager.py  conversation_service.py  conversation_session.py
src/microsoft_agent_framework/domain/: exceptions.py  retry.py
tests/: __init__.py  conftest.py  test_agents.py  test_api_health.py  test_domain_models.py  test_enhanced_exceptions.py  test_evaluation.py  test_exceptions.py  test_retry.py  test_services.py
(+19 files in other folders)
